# cosmic-applet-niri

./: Cargo.toml  README.md  justfile
res/: com.niri.applets.metainfo.xml  com.niri.workspaces.desktop
src/: main.rs
src/workspaces/: app.rs  mod.rs  niri.rs
