[package]
name = "cosmic-applets-niri"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.80"

[dependencies]
niri-ipc = "25.2.0"
open = "5.1.3"
tokio = "1.44.2"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
# rev = "1abd6d75786697b48e1d5922717febd0ebeb48ac"
rev = "e5802b535bf9d6599b0ac90a9499e80c60c0284b"
features = ["applet", "tokio", "wayland"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
